--- a/index.html
+++ b/index.html
@@ -6,17 +6,60 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>FlexBoxを理解したい!</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
 </head>
 
 <body>
   <header class="l-header">
     <div class="c-hamburger">
       <span></span>
-      <span></span>
-      <span></span>
+    </div>
+    <div class="c-logo">
+      <span class="c-logo__text c-logo__text--blue">G</span>
+      <span class="c-logo__text c-logo__text--red">o</span>
+      <span class="c-logo__text c-logo__text--yellow">o</span>
+      <span class="c-logo__text c-logo__text--blue">g</span>
+      <span class="c-logo__text c-logo__text--green">l</span>
+      <span class="c-logo__text c-logo__text--red">e</span>
     </div>
   </header>
-  <script src="src/js/app.js"></script>
+
+  <div class="c-search-box">
+    <div class="c-search-query">
+      <form class="c-search-query__input">
+        <input type="text" title="検索" name="q">
+      </form>
+      <div class="c-search-query__submit">
+        <i class="fa fa-search"></i>
+      </div>
+    </div>
+
+    <div class="c-search-type">
+      <div class="c-search-type__item --active">すべて</div>
+      <div class="c-search-type__item">動画</div>
+      <div class="c-search-type__item">ニュース</div>
+      <div class="c-search-type__item">画像</div>
+      <div class="c-search-type__item">地図</div>
+      <div class="c-search-type__item">ショッピング</div>
+      <div class="c-search-type__item">書籍</div>
+      <div class="c-search-type__item">フライト</div>
+      <button class="c-search-type__tool">検索ツール</button>
+    </div>
+
+    <div class="c-option">
+      <div class="c-option__text">こちらを検索しますか?</div>
+      <a class="c-option-item">
+        <div class="c-option-item__image"></div>
+        <div class="c-option-item__content">
+          <div class="c-option-item__title">Kento75</div>
+          <div class="c-option-item__title">エンジニア</div>
+        </div>
+      </a>
+    </div>
+
+    <script src="src/js/app.js"></script>
 </body>
 
 </html>
